deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exstream
  labels:
    app.kubernetes.io/name: exstream
